Update java, gradle and all dependencies